manifests/sure/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: jovian-prod
spec:
  selector:
    app: sure
  ports:
    - port: 3000
      targetPort: 3000
